--- a/package.json
+++ b/package.json
@@ -7,6 +7,12 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
+    "d3-array": "^2.4.0",
+    "d3-axis": "^1.0.12",
+    "d3-fetch": "^1.1.2",
+    "d3-scale": "^3.2.1",
+    "d3-shape": "^1.3.7",
+    "d3-time-format": "^2.2.3",
     "jquery": "^3.5.0",
     "mdbreact": "^4.25.6",
     "react": "^16.13.1",
