--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
     "jquery": "^3.5.0",
+    "jquery-csv": "^1.0.11",
     "mdbreact": "^4.25.6",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
