--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "d3-axis": "^1.0.12",
     "d3-fetch": "^1.1.2",
     "d3-scale": "^3.2.1",
+    "d3-selection": "^1.4.1",
     "d3-shape": "^1.3.7",
     "d3-time-format": "^2.2.3",
     "jquery": "^3.5.0",
