--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "d3-selection": "^1.4.1",
     "d3-shape": "^1.3.7",
     "d3-time-format": "^2.2.3",
+    "d3-transition": "^1.3.2",
     "jquery": "^3.5.0",
     "jquery-csv": "^1.0.11",
     "mdbreact": "^4.25.6",
