--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jquery": "^3.5.0",
     "jquery-csv": "^1.0.11",
     "mdbreact": "^4.25.6",
+    "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
