--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "covid-dashboard-app",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -18,6 +19,7 @@
     "jquery": "^3.5.0",
     "jquery-csv": "^1.0.11",
     "mdbreact": "^4.25.6",
+    "mocha": "^7.1.2",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
@@ -28,7 +30,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "mocha",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
