--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.4.1",
     "d3-array": "^2.4.0",
     "d3-axis": "^1.0.12",
+    "d3-ease": "^1.0.6",
     "d3-fetch": "^1.1.2",
     "d3-scale": "^3.2.1",
     "d3-selection": "^1.4.1",
