--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "bootstrap": "^4.4.1",
     "d3-array": "^2.4.0",
     "d3-axis": "^1.0.12",
+    "d3-brush": "^1.1.5",
     "d3-ease": "^1.0.6",
     "d3-fetch": "^1.1.2",
     "d3-scale": "^3.2.1",
     "d3-selection": "^1.4.1",
     "d3-shape": "^1.3.7",
+    "d3-time": "^1.1.0",
     "d3-time-format": "^2.2.3",
     "d3-transition": "^1.3.2",
     "jquery": "^3.5.0",
