--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "d3-transition": "^1.3.2",
     "jquery": "^3.5.0",
     "jquery-csv": "^1.0.11",
+    "lodash": "^4.17.15",
     "mdbreact": "^4.25.6",
     "mocha": "^7.1.2",
     "popper.js": "^1.16.1",
