--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "antd": "^4.2.4",
     "axios": "^0.19.2",
-    "bootstrap": "^4.4.1",
+    "bootstrap-css-only": "^4.4.1",
     "d3-array": "^2.4.0",
     "d3-axis": "^1.0.12",
     "d3-brush": "^1.1.5",
@@ -28,7 +29,6 @@
     "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.0.0",
     "react-datepicker": "^2.16.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
