--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "d3-time": "^1.1.0",
     "d3-time-format": "^2.2.3",
     "d3-transition": "^1.3.2",
+    "dayjs": "^1.8.27",
     "jquery": "^3.5.0",
     "jquery-csv": "^1.0.11",
     "lodash": "^4.17.15",
@@ -29,7 +30,6 @@
     "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
-    "react-datepicker": "^2.16.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
