--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.2.4",
     "axios": "^0.19.2",
-    "bootstrap-css-only": "^4.4.1",
     "d3-array": "^2.4.0",
     "d3-axis": "^1.0.12",
     "d3-brush": "^1.1.5",
@@ -22,16 +21,12 @@
     "d3-time-format": "^2.2.3",
     "d3-transition": "^1.3.2",
     "dayjs": "^1.8.27",
+    "eslint-config-react-app": "^5.2.1",
     "jquery": "^3.5.0",
-    "jquery-csv": "^1.0.11",
     "lodash": "^4.17.15",
-    "mdbreact": "^4.25.6",
-    "mocha": "^7.1.2",
-    "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "typescript": "^3.8.3"
   },
