--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-config-react-app": "^5.2.1",
     "jquery": "^3.5.0",
     "lodash": "^4.17.15",
+    "moment": "^2.26.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
