Install jest Reinstall packages due to dependency conflicts

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "mocha",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
