--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jquery": "^3.5.0",
     "lodash": "^4.17.15",
     "moment": "^2.26.0",
+    "parquetjs": "^0.11.2",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
