--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "d3-time": "^1.1.0",
     "d3-time-format": "^2.2.3",
     "d3-transition": "^1.3.2",
+    "d3-zoom": "^1.8.3",
     "dayjs": "^1.8.27",
     "eslint-config-react-app": "^5.2.1",
     "jquery": "^3.5.0",
