--- a/package.json
+++ b/package.json
@@ -56,5 +56,8 @@
   "main": "index.js",
   "repository": "git@github.com:HopkinsIDD/covid-dashboard-app.git",
   "author": "Genevieve Hoffman <genny.hoffman@gmail.com>, Lily Xu <lilyxu@alum.mit.edu>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "flow-bin": "^0.129.0"
+  }
 }
