--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.2.4",
+    "aws-sdk": "^2.723.0",
     "axios": "^0.19.2",
     "d3-array": "^2.4.0",
     "d3-axis": "^1.0.12",
