--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "typescript": "^3.9.6"
   },
   "scripts": {
