--- a/.github/workflows/s3.yml
+++ b/.github/workflows/s3.yml
@@ -40,6 +40,9 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-2
+        
+    - name: Push outcomes temporarily
+      run: aws s3 cp src/store/outcomes.json s3://idd-dashboard-runs-staging/json-files/outcomes.json
 
     - name: Copy build directory files to AWS s3 bucket
       run: |
